2013-09-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/sugar/functions/diff.h: Declare set_previous
	const and add a missing traits:: prefix before is_na

2013-09-21  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/Rcpp-modules.Rnw: Remove vignette-local compilations
	which again caused problems for the Windows builds at R-Forge and
	win-builder. Unit tests comprise the same functionality and pass.

	* vignettes/Rcpp-attributes.Rnw: Refresh look by using Bitstream
	Charter, and microtype package (cf http://www.khirevich.com/latex)
	* vignettes/Rcpp-extending.Rnw: Idem
	* vignettes/Rcpp-FAQ.Rnw: Idem
	* vignettes/Rcpp-modules.Rnw: Idem
	* vignettes/Rcpp-package.Rnw: Idem
	* vignettes/Rcpp-quickref.Rnw: Idem
	* vignettes/Rcpp-sugar.Rnw: Idem

2013-09-20  Dirk Eddelbuettel  <edd@debian.org>

	* R/Module.R: More ':::' cleanups to make R CMD check happy
	* R/RcppClass.R: Ditto

	* NAMESPACE: Some new exports related to this

	* man/setRcppClass.Rd: Document loadRcppClass()
	* man/Rcpp-internal.Rd: Added in order to document
	cpp_object_initializer() and cpp_object_dummy()

2013-09-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/longlong.h: Unbreak long long by making it (as
	before) conditional on g++ (or clang) as well as C++11. The condition
	can be OR'ed with another suitably-defined variable, but the default
	has to be off as CRAN compliance has to remain the standard

2013-09-19  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/longlong.h: isolate all handling of long long
        in a separate file which we might choose not to include by default

        * include/Rcpp/traits/r_sexptype_traits.h : unsigned int wrapped as
	REALSXP long standing feature request from Murray.
        * R/Attributes.R : Added the helper demangle and sizeof functions
        * man/demangle.Rd : Documentation for demangle and sizeof
        * include/Rcpp/platform/compiler.h : less restritive support of long